# Spatial-MAB-taboo

./: .gitignore  Gabor tests.ipynb  README.md  dyadic_simulations.ipynb  illustration.ipynb  pyproject.toml  reward_generation.ipynb  reward_landscapes.ipynb  rl_utils.py  run_parameter_sweep.sh  run_single_job.sh  single_agent_simulations.ipynb  train_rl_agent.py
abm/: agent.py  batch_analysis.py  model.py  performance_comparison.py  reporter_helpers.py  rewards.py  rewards_clean.py  rewards_utils.py  run_parameter_sweep.py  run_slurm_jobs.py  utils.py  visualization_optimal_dog.py
experimental_data_analysis/: advanced_bandit_analyses.py  import_prolific_data.py  pilot_data_visualizations.ipynb  visualize_bandit_data.py
hmm_analysis/: data.py  decoding.py  draw_model.py  estimate_hmm.py  foraging_analysis.py  hmm_model.py  main.py  model.py  plotting.py  transition_performance_correlation.py  transition_prediction_model.py
notebooks/: alternate_models.ipynb  dyadic_simulations.ipynb  reward_landscapes.ipynb  single_agent_distribution_samples.ipynb  single_agent_simulations.ipynb
rl/: train_agent.py  utils.py
sbi_pipelines/: estimate_human_4d.py  evaluate_all.py  merge_data.py  model.py  pipeline_4d_cnn.py  pipeline_cnn.py  pipeline_mle.py  pipeline_summary.py  plot_pairplots.py  ppc_diagnostics.py  run_all.py  simulate.py
sbi_pipelines/plotting/: plot_search_trajectories.py
spatial_mab_taboo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_social_generalization.py
webapp/: app.js  index.html  styles.css
