[project]
name = "spatial-mab-taboo"
version = "0.1.0"
description = "Spatial MAB experiments"
authors = [{name = "valery", email = "vagechirkov@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12, <3.14"
dependencies = [
    "jupyterlab>=4.4.3",
    "ipykernel",
    "mesa[all]>=3.2.0",
    "wandb[media,sweeps]>=0.20.1",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"