[project]
name = "spatial-mab-taboo"
version = "0.1.0"
description = "Spatial MAB experiments"
authors = [{name = "valery", email = "vagechirkov@gmail.com"}, {name = "gerardo", email = "parra.gpg@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12, <3.14"
dependencies = [
    "jupyterlab>=4.4.3",
    "ipykernel",
    "mesa[all]>=3.2.0",
    "wandb[media,sweeps]>=0.20.1",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "scipy",
    "pandas",
    "tqdm",
    "torch",
    "torchrl",
    "tensordict",
    "sbi>=0.26.1",
    "python-dotenv>=1.2.2",
    "arviz>=1.2.0",
    "pymc>=6.0.1",
    "graphviz>=0.21",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["abm*", "rl*"]


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
